--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -14,7 +14,7 @@
                     <h1 class="product__title"><%= product.title %></h1>
                 </header>
                 <div class="card__image">
-                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                    <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
                 </div>
                 <div class="card__content">
                     <h2 class="product__price">$<%= product.price %></h2>
@@ -29,6 +29,7 @@
             </article>
             <% } %>
         </div>
+        <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage}) %>
         <% } else { %>
         <h1>No Products Found!</h1>
         <% } %>
