--- a/public/css/main.css
+++ b/public/css/main.css
@@ -187,13 +187,10 @@ form {
 
 .card__image {
   width: 100%;
-  height: 10rem;
-  text-align: center;
 }
 
 .card__image img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
 }
 
 .card__actions {
@@ -252,7 +249,6 @@ form {
 }
 
 .pagination {
-  margin-top: 2rem;
   text-align: center;
 }
 
